tests/fixtures/invalid/pointer_function_used_as_scalar.c
int *choose(int *slot) {
    return slot;
}

int main(void) {
    int value = 1;
    return choose(&value);
}
